--- a/css stuff/myres.css
+++ b/css stuff/myres.css
@@ -8,9 +8,10 @@
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+	-webkit-tap-highlight-color: transparent;
 }
 :focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
+a:focus,a:active{outline: none;color:inherit}
 
 nav,footer,header,aside{display: block;}
 
